Looks like there's a fault in the JDK version running on my Jenkins server... this will fix the issue.